--- a/package.json
+++ b/package.json
@@ -127,7 +127,8 @@
       "@types/request": {
         "form-data": "^4.0.3"
       }
-    }
+    },
+    "tar": "^7.5.7"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.4",
@@ -138,7 +139,7 @@
   "devDependencies": {
     "@eslint/js": "^9.34.0",
     "@pact-foundation/pact": "^16.0.1",
-    "@pact-foundation/pact-node": "^10.11.4",
+    "@pact-foundation/pact-node": "^10.18.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/node": "^24.3.0",
