--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,12 +82,12 @@ jobs:
           HUSKY: 0
           NODE_OPTIONS: "--max-old-space-size=4096"
 
-  # 📦 NPM Publish
+  # 📦 NPM Publish (Fallback for release events when semantic-release is skipped)
   npm-publish:
     name: 📦 Fallback NPM Publish
     runs-on: ubuntu-latest
     needs: semantic-release
-    if: failure() && github.event_name == 'release'
+    if: always() && github.event_name == 'release' && needs.semantic-release.result == 'skipped'
     permissions:
       contents: read
       id-token: write
@@ -211,7 +211,7 @@ jobs:
 
       - name: 🏗️ Build and Push Docker Image
         id: docker-build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64
@@ -230,7 +230,7 @@ jobs:
 
       - name: 🔄 Retry Docker Build on Failure
         if: failure() && steps.docker-build.outcome == 'failure'
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64,linux/arm64
@@ -247,7 +247,7 @@ jobs:
           sbom: true
 
       - name: 📝 Update Docker Hub Description
-        uses: peter-evans/dockerhub-description@v3
+        uses: peter-evans/dockerhub-description@v4
         if:
           github.event_name == 'release' || needs.semantic-release.outputs.new-release-published == 'true' || github.ref
           == 'refs/heads/main'
@@ -352,7 +352,7 @@ jobs:
           fi
 
       - name: 📤 Upload DXT Package to Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.release-info.outputs.tag }}
           files: mcp-wordpress.dxt
