--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
         "form-data": "^4.0.3"
       }
     },
-    "tar": "^7.5.7"
+    "tar": "7.5.7"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.4",
